--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <div class="input-group col-md-6 mb-2">
         <input type="text" class="form-control" id="search" placeholder="nature">
       </div>
-      <button type="button" onclick="getImages(search.value)" id="search-btn" class="btn btn-primary mb-2">Search</button>
+      <button type="button" onclick="getImages(search.value)" id="search-btn"
+        class="btn btn-primary mb-2">Search</button>
     </div>
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
@@ -39,13 +40,15 @@
         </button>
       </div>
       <div class="row gallery">
-
       </div>
     </section>
     <!-- slider -->
     <div class="main">
+      <div class="d-flex flex-column justify-content-center ">
+        <button class="btn btn-danger user-info" onclick=userInfo()>User Info</button>
+        <h1 id="sliderTotal" class="d-none"></h1>
+      </div>
       <section class="mt-5" id="sliders">
-
       </section>
       <div class="dots d-flex mt-2 w-100 justify-content-center align-items-center bg-light">
         <span class="dot" onclick="changeItem(-1)"></span>
