--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       <div class="input-group col-md-6 mb-2">
         <input type="text" class="form-control" id="search" placeholder="nature">
       </div>
-      <button type="button" onclick="getImages(search.value)" id="search-btn"
-        class="btn btn-primary mb-2">Search</button>
+      <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
@@ -44,7 +43,7 @@
     </section>
     <!-- slider -->
     <div class="main">
-      <div class="d-flex flex-column justify-content-center ">
+      <div class="d-flex flex-column justify-content-center">
         <button class="btn btn-danger user-info" onclick=userInfo()>User Info</button>
         <h1 id="sliderTotal" class="d-none"></h1>
       </div>
